--- a/flex.html
+++ b/flex.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>new webpage</title>
-        <link rel="stylesheet" href="newstyle.css">
+        <link rel="stylesheet" href="flexstyle.css">
     </head>
     <body>
         <div class="flex">
