updates on js files

--- a/experiment.html
+++ b/experiment.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        
     </head>
     <body>
-        asd asdadsa dsa 
+        <h1 id="tony" > heading  </h1>
+        <h2>second heading </h2>
+        <img id="image" src="closedDoor.jpg" width="50px" height="50px" >
+        <button type="button"
+        onclick='document.getElementById("image").src= "oppenedDoor.png" '>open door</button>
+
+        <button type="button"
+        onclick='document.getElementById("image").src= "closedDoor.jpg" '> close door </button>
+
+
+        <p id="demo">this is the paragraph </p>
+        <p id = "khoury"> oj sadfi jasdofi jaoi j</p>
+
+        <button type="button"
+onclick='document.getElementById("demo").style.fontSize = "35px"'> click me </button> 
+
+<button type="button" 
+ onclick = myFunction()>the new one </button>
+
+<button type="button"
+onclick='document.getElementById("khoury").innerHTML = "hi guys" '> click on </button>
+        <script src="experiments.js"></script> 
+        <script src="conditional.js"></script>
+        <script src="loops.js"></script>
+
+
     </body>
 </html>
