--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
             asdljaskdjnaskjdnaskjdnaskjdnaslkdmlaskdmalskdmaslkdmaslkdmlkmkm <br>
         
         </div>
-
+<script src="loops.js"> </script>
     </body>
 </html>
